--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>foodmate - best food website !</title>
 </head>
 <body>
-    <h1>foodmate - buy now</h1>
-    <p>best food website!</p>
-    <p>new para</p>
-    <p>new main commit</p>
+    <h1>foodmate </h1>
+   
 </body>
 </html>
